...
                        <Button
                            title="Get Started"
                            titleStyle={{ color: 'black' }}
                            onPress={closeOnboarding}
                            buttonStyle={[styles.finishButton]}
                            type='outline'
                            accessibilityLabel="Get started"
                            accessibilityRole="button"
                        />
                    }
                </View>
            </Animated.View>
        </View>
...
